--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "dotenv": "^16.0.2",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
+    "graphql": "^15.8.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-router-native": "^6.3.0",
